--- a/public/404.html
+++ b/public/404.html
@@ -3,9 +3,9 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Star Wars Holocron</title>
+    <title>Brian Baez | Full Stack Developer</title>
     <script type="text/javascript">
-      var pathSegmentsToKeep = 1;
+      var pathSegmentsToKeep = 0;
 
       var l = window.location;
       l.replace(
