--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 
     <title>Brian Baez | Full Stack Developer</title>
 
+    <meta http-equiv=”Permissions-Policy” content=”interest-cohort=()”>
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
